p2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dumb-service
            port:
              number: 3000
  - host: "app2.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redlib-service
            port:
              number: 8080
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: actual-service
            port:
              number: 5006
